--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-watch": "~0.1.4",
-    "grunt-contrib-coffee": "~0.3.2"
+    "grunt-contrib-coffee": "~0.6.0",
+    "grunt-contrib-connect": "~0.2.0"
   }
 }
