--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-coffee": "~0.6.0",
-    "grunt-contrib-connect": "~0.2.0"
+    "grunt-contrib-connect": "~0.2.0",
+    "grunt-testem": "~0.3.4",
+    "mocha": "~1.9.0",
+    "chai": "~1.5.0"
   }
 }
