--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
 install:
-- npm install -g grunt-cli testem
+- npm install -g grunt-cli testem coffee-script
 - npm install
 script: grunt test
