switch Travis-CI configuration to use https://github.com/codeforeurope/navigator-proto

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,7 @@ env:
       NSa08sEGEb2aaiv4kUGdB/gi4h2QJWghc9Syzy7vIelHPSkKJl1aG7OPbVXX
       XVAlbGRSkP++3ShW/mFJ/ntZpWxcSt8K/p4mRE1f3r9aGv/PkkNlJKODC143
       s8GTjslJgi9Ll/ao1Ys9aeCkRdYKfqMWM4fJMWkeucuh3lZ+HAw=
+  - secure: |-
+      foXH7e95axy5JLZBd8vA3nr5OuALylDu9X4032k0kK2JFxMY7GQJ9s4XTJ88
+      RP1noE/ClfmdCICnvrT5kWRQUkwKNc+bpXxRDmhioumooKUAfRcQi9mEvt6O
+      a8B/1BTjjTXuv3LPr7wwNNTn8l22n40Qpum2mrTi6k1ZjN6uiEE=
