Add example tests with Robot Framework

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ install:
 - npm install -g grunt-cli testem coffee-script
 #- npm install -g git://github.com/datakurre/saucelauncher.git
 - npm install
+- pip install -r requirements.txt
 script: grunt test$TARGET
 env:
   matrix:
   - TARGET=
+  - TARGET=-robot
 #  - TARGET=-mobile
   global:
   - SAUCE_USERNAME=navigator-proto
