--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-static/js/
 *~
-node_modules
-sauce_connect.log
-test_functional.tap
-testem.json
+.idea
 .installed.cfg
 bin
-eggs
 develop-eggs
-parts
+eggs
+ghostdriver.log
 log.html
-report.html
+node_modules
 output.xml
+parts
+report.html
+sauce_connect.log
 selenium-screenshot-*.png
+static/js/
+test_functional.tap
+testem.json
+
