--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-exec": "~0.4.0",
     "grunt-testem": "~0.3.4",
     "mocha": "~1.9.0",
-    "chai": "~1.5.0"
+    "chai": "~1.5.0",
+    "grunt-grunticon": "0.3.3"
   }
 }
