--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ env:
 #  - TARGET=-mobile
   global:
   - SAUCE_USERNAME=navigator-proto
+  # From https://github.com/theintern/intern/wiki/Travis-CI-integration
+  # Sauce Labs are OK with this and it is currently necessary to expose this information for testing pull requests;
+  # please get your own free key if you want to test yourself
+  - SAUCE_ACCESS_KEY=5b6e172d-edb6-41ba-bde0-c284b475f7fe
   - secure: |-
       NSa08sEGEb2aaiv4kUGdB/gi4h2QJWghc9Syzy7vIelHPSkKJl1aG7OPbVXX
       XVAlbGRSkP++3ShW/mFJ/ntZpWxcSt8K/p4mRE1f3r9aGv/PkkNlJKODC143
