--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,16 @@
 [buildout]
-parts = pybot
+parts = scripts
+find-links =
+    https://github.com/datakurre/robotframework/tarball/2.8.2rc0/robotframework-2.8.2rc0.tar.gz
+versions = versions
 
-[pybot]
+[versions]
+robotframework = 2.8.2rc0
+
+[scripts]
 recipe = zc.recipe.egg
 eggs =
-    robotframework
-    robotframework-selenium2library
+    Sphinx
+    sphinxcontrib-robotframework
+    robotframework-selenium2screenshots
+scripts = pybot sphinx-build
