Fix missing pybot

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ robotframework = 2.8.2rc0
 recipe = zc.recipe.egg
 eggs =
     Sphinx
+    robotramework
     sphinxcontrib-robotframework
     robotframework-selenium2screenshots
 scripts = pybot sphinx-build
