--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ script:
 env:
   global:
   - ARTIFACTS_S3_BUCKET=citynavigator
-  - secure: "NDk+62qN264PFCYfam1ai1RZWu8RRoVPCbr8sCA4MHn1XWmn+f0FTqVoPSSihwc3kB9kS0Z+fdu70PjQcsY+su9ovjApWNB9Cq/CF0BvJRD0NcJazxjQd+nPXj7uJuDtkKfDheSxtbqIYOTL1wooV94iqoC+2l+rtiJfObkZM7s="
-  - secure: "jf4Qz+bQR0z9bE6JpGGm40gr1PtgBvr66E/UUcWI4Q7jHnc7RjtTAf9fORG6i7X3Q62tRlt8d2BIo4RIn+AM5+wI0+5ZXV8fbZs706gzS9s2gJt0ilG67V7mIUQuqTqWCWnbgPgjCEQx4l1k9qrCEf5zlsB45W4x20nJD7SlgP8="
-  - secure: "rGEJ2q6xPwkqtc/AEe/KPVNmiUTwDLoDl+0qRMrP3GcODPii4Im9KcXwn3myhSjOt0Jodw0Dk05Sj52DbXj2+IgEu669J9MYxvuS0kXBnI6pPJrqzicGcUmbGMp5AlFcKnUJAhKvV+fiXc4sxA2lqwRbJ/rDOyrBQp+XrMP8S14="
-  - secure: "YlkDVx9fBOa7Iyz5e296s+5CgAqWXoj/pexl9KJ9L1qIa74PE2HG5ME2yWzIVn97dTlqGIhkO65GNwYKrN5OBnKbsCC7PTtcd4+9JkMBbqTE3UEva5tXB7T55rFHu4V7ClE0ivtrIbjMDvaNsV2YVD1PyJrQYMt7WkUu7U2EUj4="
+  - secure: ssrh7iOhADMalKSaR1l5ieqN0CsjZEYdkDpOaDOPkQ7+gGYXWV482xE9B7pMHyxDis7/K7FwufuGNCHJDxdrUAdCMz9YudlBEtQGTc4T+yzyz9EsmzatdVivw2DLLrhBjTkLCY/BqRCSK6aXjY708uzaoTJiTge9mR4dYQvT9aQ=
+  - secure: PhoE54YVCRMQb90yCryyrBFqIVZXBqY8U0A1NPpK+gfZOrVGUAaPEUPywWGv5+i9t/kaGjfwASo5VnXeBj78Lbnb4idvHLDBfkGDgGtks9/LklvMzS6IowqSXG/dRIeb2ESekJPuG5Xb0g5uXNlvk//ZJwYcKZmYC2jqThOT7yg=
+  - secure: GvV20kKaiFOoRcrsI8/wGSclMn0c9x+GCW5eoDkjdgpMlpwkOpiTT81W5XjarmzPlAF2cUyL1y0/cJNHrcTw72lL0NGWub2CkdQnH3Hrrsm+ry+VYoF2ifyny97O7FZnMBevzuqMH2cttfC8pF1ndSuBTk7kr6IUBFJvfi8JYZw=
+  - secure: RaVBLspVr/4ah+q8LW85wTbKsRAdAccpC1JOcKxPQiRFUmnLD1I9eEhxJ34jatqo6MCEVd/XkOjhvS/iRiy4fKlPPLMlH30WGP0sdh347KcgXQujOicMMPNxzINOGGka0/oVrimk6TDXyRUZ2tZHB/BmpVXWIuBvLJIDqVcTKgc=
   matrix:
   - TARGET=
   - TARGET=-robot
