--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ addons:
   - username: $SAUCE_USERNAME
   - access_key: $SAUCE_ACCESS_KEY
 install:
-- sudo apt-get install python-virtualenv
 - npm install -g grunt-cli testem coffee-script
 - npm install
-- virtualenv test-env
-- test-env/bin/python bootstrap.py
-- bin/buildout -N -t 3
+- python bootstrap.py -v 2.2.1
+- bin/buildout
 before_script:
 - gem install travis-artifacts
 after_script:
