--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
 - python bootstrap.py --version 2.1.1
 - bin/buildout
 before_script:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 - gem install travis-artifacts
 after_script:
 - travis-artifacts upload --path html --target-path ./
