--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 - gem install travis-artifacts
 after_script:
-- travis-artifacts upload --path html --target-path ''
+- travis-artifacts upload --path html --target-path ""
 - travis-artifacts upload --path *.png
 - travis-artifacts upload --path log.html
 - travis-artifacts upload --path report.html
