--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ eggs =
     robotframework
     sphinxcontrib-robotframework
     robotframework-selenium2screenshots
-scripts = phinx-build
+scripts = sphinx-build
 
 [pybot]
 recipe = zc.recipe.egg
