--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-exec": "0.x",
     "grunt-testem": "0.x",
     "mocha": "1.x",
-    "chai": "1.x"
+    "chai": "1.x",
+    "grunt-newer": "~0.7.0"
   }
 }
